[metadata]
name = fail2ban_exporter
version = 0.0.1
author = Jean-Kevin KPADEY
author_email = jeankevin.kpadey@gmail.com
description = 'Fail2ban exporter for Prometheus'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mivek/fail2ban_exporter
project_urls =
    Bug Tracker = https://github.com/mivek/fail2ban_exporter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    prometheus-client

[options.packages.find]
where = src
